# Recomenda-oML

./: README.md  app.py  pyproject.toml  teste.ipynb
data/: Rating.xlsx
